# generic-sfml-game

./: .gitignore  CMakeLists.txt  GenericFullHeader.h  README.md  main.cpp  windowSize.h
documentation/: doxygen.conf  mainpage.dox
include/: Button.h  Game.h  MainMenu.h  PauseScreen.h  SplashScreen.h
src/: Button.cpp_impl.txt  CMakeLists.txt  Game.cpp  MainMenu.cpp  PauseScreen.cpp  SplashScreen.cpp
